<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0FFFF"
    android:padding="20dp"
    tools:context="com.example.helena.kalender.MainActivity">

    <EditText
        android:id="@+id/event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/date_view"
        android:height="40dp"
        android:background="@drawable/borders"
        android:hint="@string/event"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="106dp"
        android:height="40dp"
        android:background="@drawable/borders"
        android:hint="@string/location"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="117dp"
        android:height="40dp"
        android:background="@drawable/borders"
        android:hint="@string/descripion"
        android:textSize="20dp" />

    <Switch
        android:id="@+id/switch_allday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_all_day"
        android:layout_alignBottom="@+id/txt_all_day"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp" />

    <TextView
        android:id="@+id/txt_all_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="173dp"
        android:text="@string/all_day"
        android:textColor="#000000"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/event_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/begin"
        android:textColor="#000000"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/event_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/event"
        android:layout_below="@+id/begin_time"
        android:text="@string/end"
        android:textColor="#000000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/begin_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:editable="false"
        android:hint="@string/date"
        android:inputType="datetime" />

    <EditText
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/event_begin"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:hint="@string/date"
        android:inputType="datetime" />



    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="37dp"
        android:text="@string/save"
        android:layout_alignParentLeft="true"
        android:background="@drawable/buttons"/>

    <TextView
        android:id="@+id/date_view"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="date"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/start_time_clock"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time" />

    <EditText
        android:id="@+id/end_time_clock"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/end_time"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time" />


</RelativeLayout>